// This is the public API offered by the shopping cart entity.
syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/api/annotations.proto";
import "google/api/http.proto";

package com.lightbend.statefulserverless.test;

option java_package = "com.lightbend.statefulserverless.test";

message IllegalHttpConfig3Message {
  repeated string illegal_repeated = 1;
}

service IllegalHttpConfig3 {
    rpc fail(IllegalHttpConfig3Message) returns (google.protobuf.Empty) {
        option (google.api.http) = {
            post: "/{illegal_repeated}"
        };
    }
}
